--- a/docs/src/styles/override.css
+++ b/docs/src/styles/override.css
@@ -24,6 +24,8 @@
 	--kf-color-gray-800: #a6a6a6;
 	--kf-color-gray-900: #cbcdcd;
 	--kf-color-gray-999: #d6d9d9;
+
+	--kf-test-variable: #d6d9d9;
 }
 
 /* Light mode colors. */
